# o3

./: .gitignore  Cargo.toml  README.md
examples/: primitives.rs
src/: id.rs  lib.rs  mem.rs  slab.rs
src/buffer/: accum.rs  block_pool.rs  byte_ring.rs  bytes.rs  capacity.rs  mod.rs  owned.rs  pool.rs  raw.rs  read.rs  ref_count.rs  rolling.rs  shared.rs  shared_pool.rs  shared_str.rs  snapshot_buf.rs  view.rs
src/cell/: brand.rs  checked.rs  late_bound.rs  manual_init.rs  mod.rs  raw.rs
src/channel/: futures.rs  mod.rs  receiver.rs  sender.rs
src/collections/: batch_set.rs  bitmap.rs  grow.rs  heap.rs  linked_pool.rs  mod.rs  pin_cell_slab.rs  pin_slab.rs  round_robin.rs  table.rs
src/marker/: mod.rs  thread_bound.rs
src/mem/: budget.rs  credits.rs  mod.rs  scratch.rs  scratch_vec.rs
src/task/: batch.rs  inline_future.rs  mod.rs  waker_set.rs
tests/: accum.rs  batch.rs  batch_set.rs  bitmap.rs  buffer_integration.rs  byte_ring.rs  bytes.rs  cellslab_reentrancy.rs  collection_support.rs  collections.rs  collections_integration.rs  compile_fail.rs  confined.rs  fixed_heap.rs  hardening.rs  intrusive_avl.rs  late_bound.rs  locality.rs  owned.rs  pin_cell_slab.rs  pin_slab.rs  primitives.rs  primitives_integration.rs  rolling.rs  shared_pool.rs  slab.rs  snapshot_buf.rs  view.rs  waker_set.rs
tests/buffer/: main.rs  owned.rs  rolling.rs  shared_pool.rs
tests/collections/: cellslab_reentrancy.rs  collections.rs  main.rs  pin_slab.rs  retire.rs  slab.rs  slab_stress.rs
tests/primitives/: locality.rs  main.rs  primitives.rs
tests/ui/: checked_cell_borrow_escape.rs  checked_cell_borrow_escape.stderr  custom_index_key.rs  custom_index_key.stderr  key_fabrication.rs  key_fabrication.stderr  key_tags.rs  key_tags.stderr  leased_bytes_slice.rs  leased_bytes_slice.stderr  linked_pool_chain_outlives_pool.rs  linked_pool_chain_outlives_pool.stderr  pin_cell_slab_vacant_entry.rs  pin_cell_slab_vacant_entry.stderr  pin_slab_key_tags.rs  pin_slab_key_tags.stderr  pin_slab_take.rs  pin_slab_take.stderr  region_permission_domain.rs  region_permission_domain.stderr  zero_generation_limit.rs  zero_generation_limit.stderr
tests/use_cases/: cartel_shared_lanes.rs  main.rs
(+13 files in other folders)
