[package]
name = "o3"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "shared-nothing primitives"
readme = "README.md"
repository = "https://github.com/dope-rs/o3"
documentation = "https://docs.rs/o3"
keywords = ["bytes", "buffer", "single-threaded", "no-share", "zero-copy"]
categories = ["data-structures", "memory-management"]
rust-version = "1.95"
autotests = false

[dev-dependencies]
trybuild = "1"

[[test]]
name = "buffer"
path = "tests/buffer_integration.rs"

[[test]]
name = "collections"
path = "tests/collections_integration.rs"

[[test]]
name = "primitives"
path = "tests/primitives_integration.rs"

[[test]]
name = "compile_fail"
path = "tests/compile_fail.rs"

[[test]]
name = "bytes"
path = "tests/bytes.rs"

[[test]]
name = "bitmap"
path = "tests/bitmap.rs"

[[test]]
name = "batch_set"
path = "tests/batch_set.rs"

[[test]]
name = "fixed_heap"
path = "tests/fixed_heap.rs"

[[test]]
name = "intrusive_avl"
path = "tests/intrusive_avl.rs"
