[package]
name = "o3"
version = "0.7.1"
edition = "2024"
license = "MIT"
description = "shared-nothing primitives"
readme = "README.md"
repository = "https://github.com/dope-rs/o3"
documentation = "https://docs.rs/o3"
keywords = ["bytes", "buffer", "single-threaded", "no-share", "zero-copy"]
categories = ["data-structures", "memory-management"]
rust-version = "1.95"

[dev-dependencies]
trybuild = "1"
